[package]
name = "comparison"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
csv = "1.3.0"
hex = "0.4.3"
num-bigint = "0.4.6"
num-integer = "0.1.46"
num-traits = "0.2.19"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.208", features = ["derive"] }
sha2 = "0.10.8"
toml = "0.8.19"
